--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -22,7 +22,7 @@
     <button mat-button [disabled]="loginForm.invalid">
       Login
     </button>
-    <button mat-button mat-tooltip="Login with Google" type="button" [matTooltipShowDelay]="500" (click)="loginWithGoogle()">
+    <button mat-button matTooltip="Login with Google" type="button" matTooltipShowDelay="500" (click)="loginWithGoogle()">
       <span fxLayout="row" fxLayoutAlign="center center">
         <span>Sign In with</span>
         <span fxFlex="5px"></span>
